; ModuleID = '/home/carl/AnghaBench/esp-idf/components/vfs/extr_vfs.c_esp_vfs_fstat.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/vfs/extr_vfs.c_esp_vfs_fstat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._reent = type { i32 }
%struct.stat = type { i32 }

@EBADF = common dso_local global i32 0, align 4
@fstat = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_vfs_fstat(%struct._reent* %0, i32 %1, %struct.stat* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct._reent*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.stat*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct._reent* %0, %struct._reent** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.stat* %2, %struct.stat** %7, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i32* @get_vfs_for_fd(i32 %12)
  store i32* %13, i32** %8, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @get_local_fd(i32* %14, i32 %15)
  store i32 %16, i32* %9, align 4
  %17 = load i32*, i32** %8, align 8
  %18 = icmp eq i32* %17, null
  br i1 %18, label %22, label %19

19:                                               ; preds = %3
  %20 = load i32, i32* %9, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %19, %3
  %23 = load i32, i32* @EBADF, align 4
  store i32 %23, i32* %10, align 4
  store i32 -1, i32* %4, align 4
  br label %33

24:                                               ; preds = %19
  %25 = load i32, i32* %11, align 4
  %26 = load %struct._reent*, %struct._reent** %5, align 8
  %27 = load i32*, i32** %8, align 8
  %28 = load i32, i32* @fstat, align 4
  %29 = load i32, i32* %9, align 4
  %30 = load %struct.stat*, %struct.stat** %7, align 8
  %31 = call i32 @CHECK_AND_CALL(i32 %25, %struct._reent* %26, i32* %27, i32 %28, i32 %29, %struct.stat* %30)
  %32 = load i32, i32* %11, align 4
  store i32 %32, i32* %4, align 4
  br label %33

33:                                               ; preds = %24, %22
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local i32* @get_vfs_for_fd(i32) #1

declare dso_local i32 @get_local_fd(i32*, i32) #1

declare dso_local i32 @CHECK_AND_CALL(i32, %struct._reent*, i32*, i32, i32, %struct.stat*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
